# CloudPlatformLua2

./: README.md  config.sh  openresty.sh
CLOUD_BASED_VO_ROBOT/: CMakeLists.txt  README.md  make.sh  parameters.txt
CLOUD_BASED_VO_ROBOT/include/: robotBase.h  slamBase.h
CLOUD_BASED_VO_ROBOT/src/: CMakeLists.txt  basic_client.cpp  robotJson.cpp  robotWS.cpp  robot_.cpp
CLOUD_BASED_VO_SERVER/: README.md
CLOUD_BASED_VO_SERVER/conf/: nginx.conf
CLOUD_BASED_VO_SERVER/core/slam/: CMakeLists.txt  make.sh
CLOUD_BASED_VO_SERVER/core/slam/include/: robotBase_server.h
CLOUD_BASED_VO_SERVER/core/slam/lib/: slamInterface.lua
CLOUD_BASED_VO_SERVER/core/slam/src/: CMakeLists.txt  CMakeLists.txt~  robotJson_server.cpp  slamBase_server.cpp  slamInterface.cpp
CLOUD_BASED_VO_SERVER/lua/: load_balancing_webserver.lua  uploading.lua
